# pybind11_generics_tests

./: .gitmodules  CMakeLists.txt  README.md  README.rst  build.py  noxfile.py  pyproject.toml  run_test.sh  setup.cfg  setup.py
.config_patch/: pyproject.toml.patch
src/pybind11_generics_tests/: __init__.py  cpp.pyi
src/pybind11_generics_tests/src_cpp/: main.cpp  test_iterable.cpp  test_list.cpp  test_sequence.cpp
tests/: __init__.py  test_any.py  test_dict.py  test_iter.py  test_iterable.py  test_list.py  test_optional.py  test_sequence.py  test_tuple.py  test_union.py  util.py
