[build-system]
requires = [ 
  "setuptools>=51", 
  "wheel>=0.36", 
  "pybind11_generics @ git+https://github.com/bluecheetah/pybind11_generics.git@78df294bfa4cd044bd507582815bacba7b11c691"
  ]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = [ "py38",]
include = "\\.pyi?$"
exclude = "\\.git|\\.mypy_cache|__pycache__|\\.venv|_build"

[tool.isort]
profile = "black"
line_length = 100
skip = [ ".git", ".mypy_cache", "__pycache__", ".venv", "_build",]
