[metadata]
name = pybind11_generics_tests
version = attr: pybind11_generics_tests.__version__
author = Eric Chang
author_email = info@bcanalog.com
license = Apache-2.0
license_file = LICENSE
description = Unit tests for pybind11_generics.
long_description = file: README.rst

[options]
package_dir = 
  = src
packages = find:
python_requires = >=3.7
tests_require =
  pytest
  pytest-xdist

[options.packages.find]
where=src

[options.package_data]
pybind11_generics_tests = 
  py.typed
  *.pyi
  *.so

[build]
build-temp = _build/temp
build-lib = _build/lib

[install_lib]
build-dir = _build/lib

[bdist_wheel]
bdist-dir = _build/bdist
dist-dir = _build/dist
